@@ -1,3 +1,7 @@
+2004-11-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b271
+
+	* Add:  New print affiliate "Fotoserve"
+
 2004-11-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b270
 
 	* Change: Use file_get_contents (when it's available) instead of using
